--- a/games_fps.html
+++ b/games_fps.html
@@ -39,6 +39,9 @@
 
 			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
 
+			import { RGBELoader } from 'three/addons/loaders/RGBELoader.js';
+			import { GroundProjectedEnv } from 'three/addons/objects/GroundProjectedEnv.js';
+
 			const clock = new THREE.Clock();
 
 			const scene = new THREE.Scene();
@@ -90,15 +93,28 @@
 
 			const STEPS_PER_FRAME = 5;
 
+			// skybox?
+			const hdrLoader = new RGBELoader();
+			const envMap = await hdrLoader.loadAsync( 'textures/blouberg_sunrise_2_1k.hdr' );
+			envMap.mapping = THREE.EquirectangularReflectionMapping;
+			let env = new GroundProjectedEnv( envMap );
+			env.scale.setScalar( 100 );
+			scene.add( env );
+			scene.environment = envMap;
+
+			const texture = new THREE.TextureLoader().load( 'textures/soccer_ball.jpg' );
+			texture.magFilter = THREE.NearestFilter;
+
 			const sphereGeometry = new THREE.IcosahedronGeometry( SPHERE_RADIUS, 5 );
-			const sphereMaterial = new THREE.MeshLambertMaterial( { color: 0xbbbb44 } );
+			// const sphereMaterial = new THREE.MeshLambertMaterial( { color: 0xbbbb44 } );
 
 			const spheres = [];
 			let sphereIdx = 0;
 
 			for ( let i = 0; i < NUM_SPHERES; i ++ ) {
 
-				const sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
+				// const sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
+				const sphere = new THREE.Mesh( sphereGeometry, new THREE.MeshLambertMaterial( { map: texture, overdraw: 0.5 } ) );
 				sphere.castShadow = true;
 				sphere.receiveShadow = true;
 
@@ -437,13 +453,13 @@
 				helper.visible = false;
 				scene.add( helper );
 
-				const gui = new GUI( { width: 200 } );
-				gui.add( { debug: false }, 'debug' )
-					.onChange( function ( value ) {
-
-						helper.visible = value;
-
-					} );
+				// const gui = new GUI( { width: 200 } );
+				// gui.add( { debug: false }, 'debug' )
+				// 	.onChange( function ( value ) {
+				//
+				// 		helper.visible = value;
+				//
+				// 	} );
 
 				animate();
 
